--- a/frontend/src/Style/Btn.module.css
+++ b/frontend/src/Style/Btn.module.css
@@ -1,22 +1,19 @@
 .btn_container{
-    display: flex;
-    margin-top: 10px;
-    margin-bottom: 40px;
-}
-
-.btnlook{
- display: flex;
- gap: 10px;
- margin-left: 7%;
- 
+   display: flex;
+    width: 90%;
+    margin: auto;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    justify-content: space-between;
+    
 }
 
 .btnblue{
-    border: 2px solid #08bcf4;
+    border: 2px solid green;
     display: inline-block;
     border-radius: 5px;
-    padding: 5px 5px;
-    width: 5vw;
+    padding: 7px 7px;
+    width: 8%;
     cursor: pointer;
     background-color: #08bcf4;
     color: #fff
@@ -26,7 +23,7 @@
     border: 2px solid #08bcf4;
     display: inline-block;
     border-radius: 5px;
-    padding: 5px 5px;
+    padding: 7px 7px;
     width: 7vw;
     cursor: pointer;
     background-color: green;
@@ -37,7 +34,7 @@
     border: 2px solid #08bcf4;
     display: inline-block;
     border-radius: 5px;
-    padding: 5px 5px;
+    padding: 7px 7px;
     width: 7.5vw;
     cursor: pointer;
     background-color: orange;
@@ -45,10 +42,10 @@
 }
 
 .btnlight{
-    border: 2px solid #08bcf4;
+    border: 2px solid orangered;
     display: inline-block;
     border-radius: 5px;
-    padding: 5px 5px;
+    padding: 7px 7px;
     width: 7.5vw;
     cursor: pointer;
     background-color: #08bcf4;
@@ -59,8 +56,8 @@
     border: 2px solid #08bcf4;
     display: inline-block;
     border-radius: 5px;
-    padding: 5px 5px;
-    width: 9vw;
+    padding: 7px 7px;
+    width: 12%;
     cursor: pointer;
     background-color: pink;
     color: #fff
@@ -70,7 +67,7 @@
     border: 2px solid #08bcf4;
     display: inline-block;
     border-radius: 5px;
-    padding: 5px 5px;
+    padding: 7px 7px;
     width: 10vw;
     cursor: pointer;
     background-color: rgb(211, 211, 133);
@@ -80,14 +77,80 @@
 }
 
 .btncyan{
-    border: 2px solid #08bcf4;
+    border: 2px solid ;
     display: inline-block;
     border-radius: 5px;
-    padding: 5px 5px;
+    padding: 7px 7px;
     width: 8.5vw;
     cursor: pointer;
     background-color: #08bcf4;
     color: black;
     font-size: 12px;
     font-weight: bold;
+}
+
+/* Media query for screen size 320px */
+@media screen and (max-width: 320px) {
+    .btn_container {
+        width: 90%;
+        display:flex;
+        align-items: stretch;
+        margin: auto;
+        margin-top: 20px; /* Adjust as needed */
+        margin-bottom: 10px; /* Adjust as needed */
+      
+    }
+
+    .btnblue,
+    .btngreen,
+    .btnorange,
+    .btnlight,
+    .btnpink,
+    .btnyellow,
+    .btncyan {
+        width: 100%;
+        margin-bottom: 10px; /* Adjust as needed */
+    }
+}
+
+/* Media query for small screens (max-width: 768px) */
+@media screen and (max-width: 768px) {
+    .btn_container {
+        display: flex;
+        width: 90%;
+        justify-content: space-between; 
+        align-items: stretch;
+    }
+
+    .btnblue,
+    .btngreen,
+    .btnorange,
+    .btnlight,
+    .btnpink,
+    .btnyellow,
+    .btncyan {
+        width: 100%;
+        margin-bottom: 10px; 
+    }
+}
+
+
+@media screen and (max-width: 1024px) {
+    .btn_container {
+        /* flex-direction: column; */
+        display: flex;
+        justify-content: space-between;
+        align-items: stretch;
+    }
+
+    .btnblue,
+    .btngreen,
+    .btnorange,
+    .btnlight,
+    .btnpink,
+    .btnyellow,
+    .btncyan {
+        width: 10%;
+        /* margin-bottom: 10px; */
+    }
 }
