--- a/frontend/src/Style/Field.module.css
+++ b/frontend/src/Style/Field.module.css
@@ -1,7 +1,8 @@
 .input_container {
-    border: none;
+
+    /* border: 1px solid ; */
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     height: 40px;
     padding-top: 20px;
@@ -10,9 +11,10 @@
 
 .field {
 
-    border: none;
+    /* border: 1px solid red; */
     display: flex;
-    gap: 10px;
+    gap: 30px;
+    margin-left: 10px;
 }
 
 .childfield_1 {
@@ -71,7 +73,7 @@
     padding: 5px 5px;
     font-size: 14px;
     font-weight: bold;
-    margin-right: 10px;
+    margin-right: 30px;
 }
 
 .search {
@@ -82,8 +84,137 @@
     padding: 5px 10px;
     font-size: 17px;
     font-weight: bold;
+    margin-right: 10px;
 }
 
 input:focus {
     outline: none;
 }
+
+/* Media query for screen size 320px */
+@media screen and (max-width: 320px) {
+    .input_container {
+        display: flex;
+        /* flex-direction: column; */
+        justify-content: space-around;
+        /* align-items: stretch; */
+        padding-top: 10px;
+    }
+
+    .field {
+        display: flex;
+        /* flex-direction: column; */
+        gap: 10px; /* Adjust the gap */
+        margin-left: 0;
+    }
+
+    .childfield_1,
+    .childselect,
+    .search {
+        width: 100%; /* Make them full width */
+    }
+
+    .lable {
+        width: auto;
+        margin-right: 0;
+        margin-bottom: 5px;
+    }
+
+    .lable+select {
+        width: 40%;
+        display: inline-block;
+        margin-bottom: 10px;
+    }
+
+    .childsearch {
+        width: 50%;
+        margin-right: 0;
+    }
+
+    .loading {
+        width: 50%;
+        margin-right: 0;
+    }
+}
+
+/* Media query for tablet screen 768px */
+@media screen and (max-width: 768px) {
+    .input_container {
+        display: flex;
+        /* flex-direction: column; */
+        justify-content: space-around;
+        /* align-items: stretch; */
+        padding-top: 10px;
+    }
+
+    .field {
+        display: flex;
+        /* flex-direction: column; */
+        gap: 15px; /* Adjust the gap */
+        margin-left: 0;
+    }
+
+    .childfield_1,
+    .childselect,
+    .search {
+        width: 15%; /* Make them full width */
+    }
+
+    .lable{
+        width: auto;
+    }
+    .lable+select{
+        width: 12%;
+        display: inline-block;
+    }
+    .childsearch{
+        width: auto;
+    }
+
+    .loading{
+        width: auto;
+        margin-right: 10px;
+    }
+}
+
+
+/* media query for laptop screen 1024px */
+@media screen and (max-width: 1024px) {
+    .input_container {
+        /* flex-direction: column; */
+        display: flex;
+        justify-content: space-around;
+        align-items: stretch;
+        /* height: auto; */
+        padding-top: 10px;
+    }
+
+     .field {
+        display: flex;
+      gap: 20px;
+    } 
+
+    .childfield_1,
+    .childselect,
+    .search {
+        width: 50%;
+        /* margin-bottom: 10px; */
+    }
+    .lable{
+        width: auto;
+    }
+    .lable+select{
+        width: 15%;
+        display: inline-block;
+    }
+    .childsearch{
+        width: auto;
+    }
+
+    .loading{
+        width: auto;
+        margin-right: 10px;
+    }
+}
+
+
