--- a/frontend/src/Style/Field.module.css
+++ b/frontend/src/Style/Field.module.css
@@ -1,33 +1,42 @@
 .input_container {
 
-    /* border: 1px solid ; */
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 40px;
-    padding-top: 20px;
+    padding: 20px;
 
 }
 
 .field {
 
-    /* border: 1px solid red; */
     display: flex;
     gap: 30px;
     margin-left: 10px;
 }
 
-.childfield_1 {
+.input_div {
+    display: grid;
+    column-gap: 5px;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: center;
+}
 
+.btn_container {
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.childfield_1 {
     border: 2px solid #08bcf4;
     display: inline-block;
     border-radius: 30px;
     padding: 5px 5px;
-    width: 8vw;
+    width: 85%;
 }
 
 .childselect {
-    width: 16vw;
+    width: 50%;
     border: 2px solid #08bcf4;
     display: inline-block;
     border-radius: 30px;
@@ -46,6 +55,10 @@
     border-radius: 5px;
     padding: 5px;
 
+}
+
+.search_filter {
+    text-align: center;
 }
 
 
@@ -77,7 +90,7 @@
 }
 
 .search {
-    width: 16vw;
+    width: 50%;
     border: 2px solid #08bcf4;
     display: inline-block;
     border-radius: 30px;
@@ -95,23 +108,15 @@ input:focus {
 @media screen and (max-width: 320px) {
     .input_container {
         display: flex;
-        /* flex-direction: column; */
-        justify-content: space-around;
-        /* align-items: stretch; */
+        flex-direction: column;
+        justify-content: center;
         padding-top: 10px;
     }
 
     .field {
         display: flex;
-        /* flex-direction: column; */
-        gap: 10px; /* Adjust the gap */
+        gap: 10px;
         margin-left: 0;
-    }
-
-    .childfield_1,
-    .childselect,
-    .search {
-        width: 100%; /* Make them full width */
     }
 
     .lable {
@@ -141,37 +146,35 @@ input:focus {
 @media screen and (max-width: 768px) {
     .input_container {
         display: flex;
-        /* flex-direction: column; */
-        justify-content: space-around;
-        /* align-items: stretch; */
+        flex-direction: column;
+        justify-content: center;
         padding-top: 10px;
     }
 
     .field {
         display: flex;
-        /* flex-direction: column; */
-        gap: 15px; /* Adjust the gap */
+        flex-direction: column;
+        gap: 15px;
         margin-left: 0;
+        margin-bottom: 10px;
+
     }
 
-    .childfield_1,
-    .childselect,
-    .search {
-        width: 15%; /* Make them full width */
-    }
 
-    .lable{
+    .lable {
         width: auto;
     }
-    .lable+select{
+
+    .lable+select {
         width: 12%;
         display: inline-block;
     }
-    .childsearch{
+
+    .childsearch {
         width: auto;
     }
 
-    .loading{
+    .loading {
         width: auto;
         margin-right: 10px;
     }
@@ -181,40 +184,36 @@ input:focus {
 /* media query for laptop screen 1024px */
 @media screen and (max-width: 1024px) {
     .input_container {
-        /* flex-direction: column; */
         display: flex;
         justify-content: space-around;
         align-items: stretch;
-        /* height: auto; */
         padding-top: 10px;
     }
 
-     .field {
+    .field {
         display: flex;
-      gap: 20px;
-    } 
+        gap: 20px;
+    }
 
-    .childfield_1,
-    .childselect,
     .search {
         width: 50%;
-        /* margin-bottom: 10px; */
     }
-    .lable{
+
+    .lable {
         width: auto;
     }
-    .lable+select{
+
+    .lable+select {
         width: 15%;
         display: inline-block;
     }
-    .childsearch{
+
+    .childsearch {
         width: auto;
     }
 
-    .loading{
+    .loading {
         width: auto;
         margin-right: 10px;
     }
 }
-
-
